4_the_details/exercise/web_app/ops/vpc_bastion/security_groups.tf
resource "aws_security_group" "bastion" {
  name = "bastion"
  vpc_id = "${aws_vpc.elixir-in-the-jungle.id}"

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
